--- a/7DaysOfCode/index.html
+++ b/7DaysOfCode/index.html
@@ -8,22 +8,29 @@
     <title>OptimusTech</title>
 </head>
 <body>
-    <nav>
-        <ul class="logolist">
-            <li><img class="logo" src="img/logo.svg" alt="Logo OptimusTech"><span class="nome-site"></span></li>
-            <li>OptimusTech</li>
-        </ul>
+    <header>
+        <img class="logo" src="img/logo.svg" alt="Logo OptimusTech">
         <ul class="navigation">
             <li><a href="">Home</a></li>
             <li><a href="">Produtos</a></li>
             <li><a href="">Produtos</a></li>
-            <li><a href="">Sobre Nós</a></li>
+            <li><a href="">Sobre nós</a></li>
         </ul>
-        <ul class="login-area">
-            <li>Entrar</li>
-            <li class="botao-cadastro">Cadastrar</li>
-        </ul>
-    </nav>
+        <div class="login-area">
+            <p>Entrar</p>
+            <button class="botao-cadastro">Cadastrar</button>
+        </div>
+    </header>
+    <section class="nav">
+        <nav>
+            <ul class="navigation-second">
+                <li><a href="">Home</a></li>
+                <li><a href="">Produtos</a></li>
+                <li><a href="">Produtos</a></li>
+                <li><a href="">Sobre</a></li>
+            </ul>
+        </nav>
+    </section>
     <section class="sobre-nos">
         <h1>Sobre Nós</h1>
         <h2>Por que somos diferentes?</h2>
@@ -58,36 +65,36 @@
         <img src="img/funcionarios.png" alt="Funcionarios na sala de reunião">    
     </section>
     <section class="vagas-emprego">
-        <ul>
-            <li class="tipo-de-vaga">Design</li>
-                <ul class="cargo-vaga">
-                    <li class="nome-vaga">Product Designer</li>
+        <div>
+            <p class="tipo-de-vaga">Design</p>
+                <div class="cargo-vaga">
+                    <p class="nome-vaga">Product Designer</p>
                     <span class="descricao_vaga">Full-time</span>
                     <span class="descricao_vaga">Faixa salarial: R$7.000</span>
-                </ul>
-                <ul class="cargo-vaga">
-                    <li class="nome-vaga">UX Designer</li>
+                </div>
+                <div class="cargo-vaga">
+                    <p class="nome-vaga">UX Designer</p>
                     <span class="descricao_vaga">Full-time</span>
                     <span class="descricao_vaga">Faixa salarial: R$6.000</span>
-                </ul>
+                </div>
             
-            <li class="tipo-de-vaga">Desenvolvimento de Software</li>
-                <ul class="cargo-vaga">
-                    <li class="nome-vaga">Desenvolvedor(a) iOS</li>
+            <p class="tipo-de-vaga">Desenvolvimento de Software</p>
+                <div class="cargo-vaga">
+                    <p class="nome-vaga">Desenvolvedor(a) iOS</p>
                     <span class="descricao_vaga">Full-time</span>
                     <span class="descricao_vaga">Faixa salarial: R$8.000</span>
-                </ul>
-                <ul class="cargo-vaga">
-                    <li class="nome-vaga">Desenvolvedor(a) Front-end</li>
+                </div>
+                <div class="cargo-vaga">
+                    <p class="nome-vaga">Desenvolvedor(a) Front-end</p>
                     <span class="descricao_vaga">Full-time</span>
                     <span class="descricao_vaga">Faixa salarial: R$7.000</span>
-                </ul>
-                <ul class="cargo-vaga">
-                    <li class="nome-vaga">Desenvolvedor(a) Back-end</li>
+                </div>
+                <div class="cargo-vaga">
+                    <p class="nome-vaga">Desenvolvedor(a) Back-end</p>
                     <span class="descricao_vaga">Full-time</span>
                     <span class="descricao_vaga">Faixa salarial:R$8.000</span>
-                </ul>
-        </ul>
+                </div>
+        </div>
     </section>
     <section class="reviews">
         <div class="caixa-reviews">
